--- a/manager/style.css
+++ b/manager/style.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   background: #000;
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
   font-family: Consolas, Monaco, Menlo, monospace, sans-serif;
 }
 
@@ -45,6 +45,7 @@ input[type="text"]:disabled, input[type="password"]:disabled {
 }
 
 textarea {
+  outline: none;
   background: #000;
   color: #fff;
   font-family: Consolas, Monaco, Menlo, monospace, sans-serif;
@@ -128,3 +129,7 @@ tr.item-list:hover {
   font-size: 12px;
 }
 
+#groups {
+  width: 600px;
+  height: 200px;
+}
