Add delete button to user edit dialog

--- a/manager/style.css
+++ b/manager/style.css
@@ -90,6 +90,13 @@ button:disabled, input[type="button"]:disabled, input[type="submit"]:disabled {
   background: #444;
 }
 
+.button-red {
+  background: #a00;
+}
+.button-red:hover {
+  background: #d55;
+}
+
 .item-list-header {
   background: #06c;
 }
