--- a/manager/style.css
+++ b/manager/style.css
@@ -102,7 +102,7 @@ button:disabled, input[type="button"]:disabled, input[type="submit"]:disabled {
 }
 
 .text-skyblue {
-  color: #08c;
+  color: #0af;
 }
 
 .item-list-header {
