Add input field style

--- a/websys.css
+++ b/websys.css
@@ -1,3 +1,8 @@
+input:-webkit-autofill {
+  -webkit-transition: all 86400s;
+  transition: all 86400s;
+}
+
 input.websys-dialog {
   background: transparent;
   color: #000;
