--- a/manager/style.css
+++ b/manager/style.css
@@ -229,7 +229,11 @@ tr.item-list:hover {
 }
 
 .search-highlight {
-  background: rgba(128,128,128,0.5) !important;
+  background: rgba(160,160,160,0.5) !important;
+}
+
+.list-info {
+  color: #ccc;
 }
 
 #user-list {
